--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html { overflow: -moz-scrollbars-vertical; overflow-y: scroll; }
 
 form label {
@@ -8,6 +7,12 @@ form label {
 }
 
         
+		@font-face
+{
+font-family: "Open-Sans";
+src: url('fonts/OpenSans-Regular.ttf'); /* IE9 */
+
+}
         body
         {
                 padding: 0;
@@ -16,8 +21,12 @@ form label {
                 color: #000;
 		min-width:800px;
 		
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+                /*font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;*/
+				font-family: "Open-Sans";
+				
+				
         }
+
         
         div.contentBox
         {
@@ -122,7 +131,8 @@ form label {
         {
                 color: #039;
                 background-color: transparent;
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+                 /*font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;*/
+				font-family: "Open-Sans";
                 font-size: 36px;
 		font-weight:200;
 		text-align:left;
@@ -132,7 +142,9 @@ form label {
         {
                 color: #039;
                 background-color: transparent;
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+                 /*font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;*/
+				font-family: "Open-Sans";
+				
                 font-size: 15px;
         }
 	h3{
@@ -146,7 +158,8 @@ form label {
         {
                 color: #039;
                 background-color: transparent;
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+                 /*font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;*/
+				font-family: "Open-Sans";
                 font-size: 0.8em;
         }
         
@@ -155,7 +168,8 @@ form label {
         {
                 color: #039;
                 background-color: transparent;
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+                 /*font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;*/
+				font-family: "Open-Sans";
                 font-size: 0.8em;
         }
 
@@ -164,7 +178,8 @@ form label {
         {
                 color: #039;
                 background-color: transparent;
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+                 /*font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;*/
+				font-family: "Open-Sans";
                 font-size: 0.6em;
         }
 
@@ -174,7 +189,8 @@ form label {
         {
                 color: #039;
                 background-color: transparent;
-                font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+                 /*font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;*/
+				font-family: "Open-Sans";
                 font-size: 0.8em;
         }
 
@@ -226,12 +242,13 @@ td.report {
 
 #hor-minimalist-b
 {
-        font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+         /*font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;*/
+				font-family: "Open-Sans";
         font-size: 12px;
-        background: #039;;
+        background: #999;
         margin: 5px;
         width: 600px;
-        border-collapse: collapse;
+       border-collapse: collapse;
         text-align: left;
 }
 #hor-minimalist-b th
@@ -251,7 +268,11 @@ td.report {
 }
 #hor-minimalist-b tbody tr:hover td
 {
-        color: #FFF;
+        color: #666;
+}
+#hot-minimalist-b a{
+	text-decoration:none;
+	color:#666;
 }
 .course{
 color:#666;
